add paragraph index.html

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero">
           <div class="hero-content">
             <h1>Hi!<br />I am Abrar ul haq</h1>
-            <!-- <p>Frontend Web Designer</p> -->
+            <p>Frontend Web Designer</p> 
             <a href="#portfolio" class="button">Visit My Works</a>
           </div>
         </div>
